Fixed some margins due to navbar being bigger than before and covering the beginning and end of some pages

--- a/static/css/accounts/user_tickets.css
+++ b/static/css/accounts/user_tickets.css
@@ -1,5 +1,6 @@
 .user-purchased-tickets-container {
     overflow: hidden;
+    margin: 1em 0;
 }
 
 .user-purchased-tickets-title {
